--- a/src/components/Navbar/LeftNav.module.scss
+++ b/src/components/Navbar/LeftNav.module.scss
@@ -14,13 +14,24 @@
   display: flex;
   flex-direction: column;
   font-size: 0.9vw;
+  font-family: $font-family;
+  box-sizing: border-box;
 }
 .aside:hover {
   width: 220px;
 }
-
-.aside_link:hover {
+.aside:hover > .aside_link > .link_title {
+  opacity: 1;
+}
+.aside .aside_link:hover {
   filter: none;
+  cursor: pointer;
+}
+.aside_link:hover > .link_title {
+  color: $orange-color;
+}
+.link_title:hover {
+  cursor: pointer;
 }
 .aside_link {
   display: flex;
@@ -37,11 +48,13 @@
     position: absolute;
     transition: 0.1s ease;
     color: rgba(0, 0, 0, 0.64);
+    font-weight: 600;
     left: calc(40px + 24px);
+    opacity: 0;
   }
 }
 
-@media screen and (max-width: 1500px) {
+@media screen and (max-width: 1550px) {
   .aside {
     width: 68px;
     padding: 0 16px;
@@ -49,6 +62,14 @@
   }
   .aside:hover {
     width: 160px;
+  }
+}
+@media screen and (max-width: 1500px) {
+  .aside_link {
+    img {
+      width: 32px;
+      height: 32px;
+    }
   }
 }
 @media screen and (max-width: 1000px) {
@@ -73,11 +94,6 @@
     align-items: center;
     justify-content: space-between;
     width: 100px;
-
-    img {
-      width: 32px;
-      height: 32px;
-    }
     .link_title {
       margin-top: 3px;
       position: relative;
@@ -90,6 +106,6 @@
 }
 @media screen and (max-width: 500px) {
   .link_title {
-    font-size: 10px;
+    font-size: 10px !important;
   }
 }
