--- a/src/components/Navbar/RightNav.module.scss
+++ b/src/components/Navbar/RightNav.module.scss
@@ -14,6 +14,7 @@
   display: flex;
   flex-direction: column;
   font-size: 0.9vw;
+  font-family: $font-family;
   justify-content: center;
 }
 .title {
@@ -37,6 +38,7 @@
   justify-content: center;
   width: 100%;
   margin-top: 24px;
+  font-weight: 600;
 }
 .link {
   flex-basis: 33%;
