--- a/src/components/ButtomBar.module.scss
+++ b/src/components/ButtomBar.module.scss
@@ -81,8 +81,9 @@
   }
 }
 @media only screen and (max-width: 768px) {
-  .button-bar {
-    padding: 0 16px;
+  .buttom_bar {
+    margin: 0;
+    padding: 0 0 0 16px;
   }
   .item {
     margin-right: 0;
