--- a/src/components/Navbar/RightNav.module.scss
+++ b/src/components/Navbar/RightNav.module.scss
@@ -76,14 +76,23 @@
 ///CART
 
 .cart_items {
-  padding: 0 24px;
-  padding-top: 24px;
-  width: 100%;
+  padding: 15px 14px 24px 0;
+  min-width: 100%;
   height: 100%;
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
   h3 {
+    padding-left: 10px;
     margin-bottom: 24px;
+    flex-basis: 5%;
   }
+  overflow-y: auto;
 }
+.cart_list {
+  flex-basis: 75%;
+}
+
 .cart_item {
   display: flex;
   position: relative;
@@ -92,6 +101,7 @@
   background-color: #fff;
   border: 1px solid rgba(0, 0, 0, 0.08);
   padding: 0 0 0 16px;
+  font-weight: 600;
   margin-bottom: 16px;
   align-items: center;
   transition: 0.3s ease;
@@ -220,6 +230,68 @@
 .cart_price {
   margin-left: 16px;
 }
+.cart_total {
+  padding-left: 10px;
+  flex-basis: 10%;
+  margin-top: 45px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.cart_total_price {
+  display: flex;
+  flex-direction: column;
+}
+.cart_total_text {
+  color: rgba(0, 0, 0, 0.48);
+}
+.cart_total_rub {
+  font-size: 1.66vw;
+  line-height: 1;
+  margin-top: 6px;
+}
+.order_button {
+  height: 48px;
+  border-radius: 24px;
+  padding: 14px 20px;
+  background-color: #ee6344;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 14px;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  transition: 0.3s ease;
+  position: relative;
+}
+.order_button:disabled {
+  background-color: rgba(0, 0, 0, 0.24);
+  pointer-events: none;
+}
+.cart_form {
+  padding-left: 10px;
+  margin-bottom: 10px;
+  flex-basis: 10%;
+  label {
+    display: block;
+    margin-bottom: 5px;
+    font-size: 12px;
+  }
+  input {
+    width: 100%;
+    height: 40px;
+    background: #fff;
+    border: 1px solid rgba(0, 0, 0, 0.08);
+    padding-left: 12px;
+    transition: 0.3s;
+    outline: none;
+  }
+  input:focus {
+    border: 1px solid $orange-color;
+  }
+}
 @media screen and (max-width: 1500px) {
   .aside {
     width: 336px;
@@ -268,6 +340,9 @@
     width: 90px;
     margin: 0;
     margin-left: 10px;
+  }
+  .cart_total_rub {
+    font-size: 24px;
   }
 }
 @media screen and (max-width: 1250px) {
