--- a/src/Pages/CategoryPage/CategoryPage.module.scss
+++ b/src/Pages/CategoryPage/CategoryPage.module.scss
@@ -1,7 +1,13 @@
-@import '../App.scss';
+@import '../../App.scss';
 .category_container {
   @extend %container;
   padding-top: 88px;
+}
+.category_container.loader {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
 }
 .header {
   margin-top: 40px;
@@ -41,12 +47,15 @@
   transition: 0.3s ease;
   font-family: $font-family;
 }
+.select:hover {
+  border: 1px solid rgba(0, 0, 0, 0.2);
+}
 .select.show > .select_dropdown {
   opacity: 1;
   visibility: visible;
   transform: translateY(0);
 }
-.select.show > .select_name_icon {
+.select.show > .select_name > .select_name_icon {
   transform: rotate(180deg);
 }
 
@@ -111,8 +120,8 @@
   background-color: #fff;
   width: 100%;
   border: 1px solid rgba(0, 0, 0, 0.16);
-  // opacity: 0;
-  // visibility: hidden;
+  opacity: 0;
+  visibility: hidden;
   transform: traslateY(20px);
 }
 @media only screen and (max-width: 1550px) {
