--- a/src/components/Menu/Menu.module.scss
+++ b/src/components/Menu/Menu.module.scss
@@ -68,7 +68,7 @@
   align-items: center;
 }
 .item {
-  padding-bottom: 24px;
+  padding: 0 10px 24px 10px;
   margin-right: 32px;
   background-color: #fff;
   transition: box-shadow 0.3s ease;
@@ -79,6 +79,9 @@
   display: flex;
   flex-direction: column;
   min-height: 280px;
+}
+.item:hover {
+  box-shadow: 0px 0px 15px 13px rgba(34, 60, 80, 0.17);
 }
 .item_img {
   cursor: pointer;
