--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,6 @@
 $main-color: rgba(0, 0, 0, 0.64);
 $orange-color: #ee6344;
+$dark-green: #6da301;
 $font-family: 'Lato', sans-serif;
 * {
   box-sizing: border-box;
