--- a/src/components/Navbar/LeftNav.module.scss
+++ b/src/components/Navbar/LeftNav.module.scss
@@ -98,6 +98,7 @@
   }
   .aside_link {
     width: 100px;
+    justify-content: center;
     .link_container {
       flex-direction: column;
       align-items: center;
