--- a/src/Pages/ProductPage/ProductPage.module.scss
+++ b/src/Pages/ProductPage/ProductPage.module.scss
@@ -75,6 +75,10 @@
   border-radius: 24px;
   border: none;
   cursor: pointer;
+  transition: 0.3s ease;
+}
+.button:hover {
+  background: $dark-green;
 }
 .button:focus {
   outline: none;
@@ -122,6 +126,13 @@
   }
 }
 @media only screen and (max-width: 860px) {
+  .price_price {
+    font-size: 16px;
+  }
+  .product {
+    border: none;
+    margin-bottom: 75px;
+  }
   .image,
   .content {
     width: 100%;
