--- a/src/components/Menu/Menu.module.scss
+++ b/src/components/Menu/Menu.module.scss
@@ -81,7 +81,7 @@
   min-height: 280px;
 }
 .item:hover {
-  box-shadow: 0px 0px 15px 13px rgba(34, 60, 80, 0.17);
+  box-shadow: 0px 0px 2px 2px rgba(34, 60, 80, 0.17);
 }
 .item_img {
   cursor: pointer;
@@ -132,6 +132,9 @@
   transition: 0.3s ease;
   line-height: 1;
   text-align: center;
+}
+.buy_button_button:hover {
+  background: $dark-green;
 }
 .buy_button_button:focus {
   outline: none;
@@ -227,6 +230,9 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+  }
+  .item:hover {
+    box-shadow: none;
   }
 }
 @media only screen and(max-width: 320px) {
